--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
+    android:background="#3772E7"
+    android:orientation="vertical"
+    android:padding="@dimen/icon_margin">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/app_name"
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_size"
+        android:fontFamily="@font/ys_display_medium"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="24dp"
+        android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/search"
+            app:icon="@drawable/search_vector"
+            app:iconGravity="textStart"
+            app:iconPadding="10dp"
+            app:iconTint="@color/black"
+            app:cornerRadius="@dimen/icon_margin"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginBottom="@dimen/icon_margin"
+            android:layout_weight="1"
+            android:backgroundTint="@color/white"
+            android:text="@string/title_search"
+            android:textColor="#1A1B22"
+            android:textSize="@dimen/text_size"
+            android:fontFamily="@font/ys_display_medium"/>
+<!--            android:background="@drawable/rounded_button"-->
+
+
+        <Button
+            android:id="@+id/media"
+            app:icon="@drawable/music_vector"
+            app:iconGravity="textStart"
+            app:iconPadding="10dp"
+            app:iconTint="@color/black"
+            app:cornerRadius="@dimen/icon_margin"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginBottom="@dimen/icon_margin"
+            android:layout_weight="1"
+            android:text="@string/title_media"
+            android:textColor="#1A1B22"
+            android:backgroundTint="@color/white"
+            android:textSize="@dimen/text_size"
+            android:fontFamily="@font/ys_display_medium"/>
+<!--            android:background="@drawable/rounded_button"-->
+
+
+        <Button
+            android:id="@+id/settings"
+            app:icon="@drawable/light_mode"
+            app:iconGravity="textStart"
+            app:iconPadding="10dp"
+            app:iconTint="@color/black"
+            app:cornerRadius="@dimen/icon_margin"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginBottom="@dimen/icon_margin"
+            android:layout_weight="1"
+            android:backgroundTint="@color/white"
+            android:text="@string/title_settings"
+            android:textColor="#1A1B22"
+            android:textSize="@dimen/text_size"
+            android:fontFamily="@font/ys_display_medium"/>
+</LinearLayout>
+</LinearLayout>
