--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
 
         <Button
             android:id="@+id/search"
-            app:icon="@drawable/search_vector"
+            app:icon="@drawable/ic_search_vector"
             app:iconGravity="textStart"
             app:iconPadding="10dp"
             app:iconTint="@color/black"
@@ -34,13 +34,14 @@
             android:text="@string/title_search"
             android:textColor="#1A1B22"
             android:textSize="@dimen/text_size"
+            android:textAllCaps="false"
             android:fontFamily="@font/ys_display_medium"/>
 <!--            android:background="@drawable/rounded_button"-->
 
 
         <Button
             android:id="@+id/media"
-            app:icon="@drawable/music_vector"
+            app:icon="@drawable/ic_music_vector"
             app:iconGravity="textStart"
             app:iconPadding="10dp"
             app:iconTint="@color/black"
@@ -53,13 +54,14 @@
             android:textColor="#1A1B22"
             android:backgroundTint="@color/white"
             android:textSize="@dimen/text_size"
+            android:textAllCaps="false"
             android:fontFamily="@font/ys_display_medium"/>
 <!--            android:background="@drawable/rounded_button"-->
 
 
         <Button
             android:id="@+id/settings"
-            app:icon="@drawable/light_mode"
+            app:icon="@drawable/ic_light_mode_24"
             app:iconGravity="textStart"
             app:iconPadding="10dp"
             app:iconTint="@color/black"
@@ -72,6 +74,7 @@
             android:text="@string/title_settings"
             android:textColor="#1A1B22"
             android:textSize="@dimen/text_size"
+            android:textAllCaps="false"
             android:fontFamily="@font/ys_display_medium"/>
 </LinearLayout>
 </LinearLayout>
