task is done v4

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,10 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:paddingStart="@dimen/icon_margin"
+    android:paddingEnd="@dimen/icon_margin"
+    android:paddingTop="?attr/actionBarSize"
+    android:theme="@style/Test.Theme.PlaylistMaker">
+<!--    android:fitsSystemWindows="true"-->
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:id="@+id/ivBack"
+            android:layout_width="@dimen/icon_size"
+            android:layout_height="@dimen/icon_size"
+            android:src="@drawable/ic_back_vector_16"
+            app:tint="?attr/colorOnBackground"
+            android:contentDescription="@string/content_desc_back"
+            android:padding="4dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/search_title"
+            android:layout_marginStart="12dp"
+            android:textColor="?attr/colorOnBackground"
+            android:textSize="@dimen/text_size"
+            android:paddingStart="@dimen/padding_edittext"
+            android:fontFamily="@font/ys_display_medium"/>
+    </LinearLayout>
+
+    <!-- Search field -->
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/padding_edittext">
+
+        <EditText
+            android:id="@+id/etSearch"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:background="@drawable/bg_search_field"
+        android:hint="@string/search_hint"
+        android:paddingStart="40dp"
+        android:paddingEnd="40dp"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:imeOptions="actionSearch"
+        android:inputType="text"
+        android:includeFontPadding="false"
+            android:textColor="?attr/colorOnSurface"
+            android:textColorHint="?attr/colorOnSurfaceVariant"/>
+
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center_vertical|start"
+            android:layout_marginStart="@dimen/padding_edittext"
+            android:src="@drawable/ic_search_vector"
+            android:contentDescription="@null"
+            android:background="?attr/colorSurface"
+            app:tint="?attr/colorOnSurfaceVariant"/>
+        <ImageButton
+            android:id="@+id/btnClear"
+            android:layout_width="@dimen/icon_size"
+            android:layout_height="@dimen/icon_size"
+            android:layout_gravity="center_vertical|end"
+            android:layout_marginEnd="@dimen/padding_edittext"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_cancel_24"
+            android:contentDescription="@string/content_desc_clear"
+            android:visibility="gone"
+            app:tint="?attr/colorOnSurfaceVariant"/>
+
+    </FrameLayout>
+</LinearLayout>
