--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,16 +26,8 @@
             app:iconPadding="10dp"
             app:iconTint="@color/black"
             app:cornerRadius="@dimen/icon_margin"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginBottom="@dimen/icon_margin"
-            android:layout_weight="1"
-            android:backgroundTint="@color/white"
-            android:text="@string/title_search"
-            android:textColor="#1A1B22"
-            android:textSize="@dimen/text_size"
-            android:textAllCaps="false"
-            android:fontFamily="@font/ys_display_medium"/>
+            style="@style/main_button"
+            android:text="@string/title_search" />
 <!--            android:background="@drawable/rounded_button"-->
 
 
@@ -46,16 +38,8 @@
             app:iconPadding="10dp"
             app:iconTint="@color/black"
             app:cornerRadius="@dimen/icon_margin"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginBottom="@dimen/icon_margin"
-            android:layout_weight="1"
-            android:text="@string/title_media"
-            android:textColor="#1A1B22"
-            android:backgroundTint="@color/white"
-            android:textSize="@dimen/text_size"
-            android:textAllCaps="false"
-            android:fontFamily="@font/ys_display_medium"/>
+            style="@style/main_button"
+            android:text="@string/title_media" />
 <!--            android:background="@drawable/rounded_button"-->
 
 
@@ -66,15 +50,7 @@
             app:iconPadding="10dp"
             app:iconTint="@color/black"
             app:cornerRadius="@dimen/icon_margin"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginBottom="@dimen/icon_margin"
-            android:layout_weight="1"
-            android:backgroundTint="@color/white"
-            android:text="@string/title_settings"
-            android:textColor="#1A1B22"
-            android:textSize="@dimen/text_size"
-            android:textAllCaps="false"
-            android:fontFamily="@font/ys_display_medium"/>
+            style="@style/main_button"
+            android:text="@string/title_settings" />
 </LinearLayout>
 </LinearLayout>
