--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -30,10 +30,7 @@
             android:fontFamily="@font/ys_display_medium"/>
     </LinearLayout>
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
+        style="@style/settings_liner"
         android:layout_marginTop="24dp"
         android:paddingTop="@dimen/padding"
         android:paddingStart="@dimen/icon_margin"
@@ -54,21 +51,14 @@
             android:layout_height="wrap_content" />
     </LinearLayout>
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
+        android:id="@+id/share_layout"
+        style="@style/settings_liner"
         android:paddingVertical="@dimen/padding"
         android:paddingHorizontal="@dimen/icon_margin">
 
         <TextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="@string/share_app"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_size_settings"
-            android:fontFamily="@font/ys_display_regular"/>
+            style="@style/settings_text"
+            android:text="@string/share_app" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -77,21 +67,14 @@
             />
     </LinearLayout>
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
-        android:paddingHorizontal="@dimen/icon_margin"
-        android:paddingVertical="@dimen/padding">
+        android:id="@+id/support_layout"
+        style="@style/settings_liner"
+        android:paddingVertical="@dimen/padding"
+        android:paddingHorizontal="@dimen/icon_margin">
 
         <TextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="@string/write_support"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_size_settings"
-            android:fontFamily="@font/ys_display_regular"/>
+            style="@style/settings_text"
+            android:text="@string/write_support" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -99,21 +82,14 @@
             android:src="@drawable/ic_group_vector" />
     </LinearLayout>
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
+        android:id="@+id/licence_layout"
+        style="@style/settings_liner"
         android:paddingVertical="@dimen/padding"
         android:paddingHorizontal="@dimen/icon_margin">
 
         <TextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="@string/agree_licence"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_size_settings"
-            android:fontFamily="@font/ys_display_regular"/>
+            style="@style/settings_text"
+            android:text="@string/agree_licence" />
 
         <ImageView
             android:layout_width="wrap_content"
