--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="text_size">22sp</dimen>
     <dimen name="text_size_settings">16sp</dimen>
     <dimen name="padding">21sp</dimen>
+    <dimen name="icon_size">24dp</dimen>
+    <dimen name="padding_edittext">12dp</dimen>
 </resources>
