--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#3772E7"
+    style="@style/Main.Theme.PlaylistMaker"
+    android:background="?attr/colorOnPrimary"
     android:orientation="vertical"
     android:padding="@dimen/icon_margin">
     <TextView
@@ -22,22 +30,13 @@
         <Button
             android:id="@+id/search"
             app:icon="@drawable/ic_search_vector"
-            app:iconGravity="textStart"
-            app:iconPadding="10dp"
-            app:iconTint="@color/black"
-            app:cornerRadius="@dimen/icon_margin"
             style="@style/main_button"
             android:text="@string/title_search" />
-<!--            android:background="@drawable/rounded_button"-->
 
 
         <Button
             android:id="@+id/media"
             app:icon="@drawable/ic_music_vector"
-            app:iconGravity="textStart"
-            app:iconPadding="10dp"
-            app:iconTint="@color/black"
-            app:cornerRadius="@dimen/icon_margin"
             style="@style/main_button"
             android:text="@string/title_media" />
 <!--            android:background="@drawable/rounded_button"-->
@@ -46,11 +45,8 @@
         <Button
             android:id="@+id/settings"
             app:icon="@drawable/ic_light_mode_24"
-            app:iconGravity="textStart"
-            app:iconPadding="10dp"
-            app:iconTint="@color/black"
-            app:cornerRadius="@dimen/icon_margin"
             style="@style/main_button"
             android:text="@string/title_settings" />
 </LinearLayout>
 </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
