--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".SearchActivity">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    style="@style/Test.Theme.PlaylistMaker">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,6 +26,7 @@
             android:id="@+id/back_arrow"
             android:layout_width="@dimen/icon_margin"
             android:layout_height="@dimen/icon_margin"
+            app:tint="?attr/colorOnBackground"
             android:src="@drawable/ic_back_vector_16"/>
 
         <TextView
@@ -24,7 +34,7 @@
             android:layout_height="wrap_content"
             android:text="@string/title_settings"
             android:layout_marginStart="12dp"
-            android:textColor="@color/black"
+            android:textColor="?attr/colorOnBackground"
             android:textSize="@dimen/text_size"
             android:paddingStart="12dp"
             android:fontFamily="@font/ys_display_medium"/>
@@ -41,7 +51,7 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="@string/black_theame"
-            android:textColor="@color/black"
+            android:textColor="?attr/colorOnBackground"
             android:textSize="@dimen/text_size_settings"
             android:fontFamily="@font/ys_display_regular"/>
 
@@ -64,6 +74,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_share_vector"
+            app:tint="?attr/colorOnSurfaceInverse"
             />
     </LinearLayout>
     <LinearLayout
@@ -79,7 +90,8 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_group_vector" />
+            android:src="@drawable/ic_group_vector"
+            app:tint="?attr/colorOnSurfaceInverse"/>
     </LinearLayout>
     <LinearLayout
         android:id="@+id/licence_layout"
@@ -95,7 +107,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_arrow_24"
-            />
+            app:tint="?attr/colorOnSurfaceInverse"/>
     </LinearLayout>
 
 </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
