--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-        <color name="colorBackground">#121212</color>
+        <color name="colorOnPrimary">#1A1B22</color>
+        <color name="colorBackground">#1A1B22</color>
         <color name="colorOnBackground">#E6E1E5</color>
 
-        <color name="colorSurface">#1E1F23</color>
-        <color name="colorOnSurface">#FFFFFF</color>
+        <color name="colorSurface">#FFFFFF</color>
+        <color name="colorOnSurface">#1A1B22</color>
 
         <color name="colorOnSurfaceVariant">#B0B3B8</color>
         <color name="colorOutline">#2F3237</color>
+
+        <color name="colorOnSurfaceInverse">#FFFFFF</color>
 </resources>
