--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,12 +14,16 @@
         <item name="elevation">0dp</item>
         <item name="android:translationZ">0dp</item>
         <item name="android:stateListAnimator">@null</item>
+        <item name="iconGravity">textStart</item>
+        <item name="iconPadding">10dp</item>
+        <item name="iconTint">@color/black</item>
+        <item name="cornerRadius">@dimen/icon_margin</item>
     </style>
     <style name="settings_text">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">?attr/colorOnBackground</item>
         <item name="android:textSize">@dimen/text_size_settings</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
     </style>
