--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,7 +2,7 @@
 <resources>
         <color name="colorOnPrimary">#1A1B22</color>
         <color name="colorBackground">#1A1B22</color>
-        <color name="colorOnBackground">#E6E1E5</color>
+        <color name="colorOnBackground">#FFFFFF</color>
 
         <color name="colorSurface">#FFFFFF</color>
         <color name="colorOnSurface">#1A1B22</color>
@@ -11,4 +11,5 @@
         <color name="colorOutline">#2F3237</color>
 
         <color name="colorOnSurfaceInverse">#FFFFFF</color>
+        <color name="colorControlActivated">#3772E7</color>
 </resources>
