--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="colorOnPrimary">#3772E7</color>
         <color name="colorBackground">#FFFFFF</color>
-        <color name="colorOnBackground">#1A1B22</color>
+        <color name="colorOnBackground">#000000</color>
 
         <color name="colorSurface">#E6E8EB</color>
         <color name="colorOnSurface">#1B1B1F</color>
