--- a/app/src/main/res/drawable/bg_search_field.xml
+++ b/app/src/main/res/drawable/bg_search_field.xml
@@ -3,10 +3,10 @@
     android:shape="rectangle">
 
     <solid android:color="?attr/colorSurface"/>
-    <corners android:radius="12dp"/>
+    <corners android:radius="@dimen/edit_search_param"/>
     <padding
-        android:left="8dp"
-        android:top="8dp"
-        android:right="8dp"
-        android:bottom="8dp"/>
+        android:left="@dimen/edit_search_param"
+        android:top="@dimen/edit_search_param"
+        android:right="@dimen/edit_search_param"
+        android:bottom="@dimen/edit_search_param"/>
 </shape>
