--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
         <color name="colorOutline">#DADCE0</color>
         <color name="colorOnSurfaceInverse">#AEAFB4</color>
     <color name="colorControlActivated">#00D6C3</color>
+    <color name="debugStrokeRed">#D32F2F</color>
+    <color name="debugStrokeBlue">#1565C0</color>
 </resources>
