--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,5 +10,12 @@
     <dimen name="lauout_padding">4dp</dimen>
     <dimen name="ic_search_margin">18dp</dimen>
     <dimen name="margin_horizontal">8dp</dimen>
+    <dimen name="item_padding">12dp</dimen>
+    <dimen name="item_gap">12dp</dimen>
+    <dimen name="cover_radius">8dp</dimen>
+    <dimen name="list_top_padding">8dp</dimen>
+    <dimen name="stroke_width">1dp</dimen>
+    <dimen name="image_size">45dp</dimen>
+    <dimen name="edit_search_param">8dp</dimen>
 
 </resources>
