--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,6 +35,21 @@
 <!--        <item name="android:paddingVertical">@dimen/padding</item>-->
 <!--        <item name="android:paddingHorizontal">@dimen/icon_margin</item>-->
     </style>
+    <style name="TrackTitle">
+        <item name="android:textColor">?attr/colorOnBackground</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+    </style>
+
+    <style name="TrackSubtitle">
+        <item name="android:textColor">?attr/colorOnSurfaceVariant</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+    </style>
+
+    <style name="Shape.SmallRounded" parent="">
+        <item name="cornerSize">6dp</item>
+    </style>
 
 
 
