--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -95,6 +95,48 @@
             app:tint="?attr/colorOnSurfaceVariant"/>
 
     </FrameLayout>
+    <!-- Блок истории -->
+    <LinearLayout
+        android:id="@+id/llHistory"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:layout_weight="1"
+        android:paddingTop="32dp"
+        android:gravity="center_horizontal"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/tvHistoryTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/history_title"
+            android:textSize="19sp"
+            android:textColor="?attr/colorOnBackground"
+            android:fontFamily="@font/ys_display_medium"
+            android:layout_marginBottom="16dp"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvHistory"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:paddingTop="@dimen/list_top_padding"
+            tools:listitem="@layout/item_track" />
+
+        <Button
+            android:id="@+id/btnClearHistory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/list_top_padding"
+            android:text="@string/clear_history"
+            android:backgroundTint="?attr/colorOnBackground"
+            android:textColor="@color/colorBackground"
+            android:fontFamily="@font/ys_display_medium"
+            android:layout_marginBottom="16dp"/>
+    </LinearLayout>
+
     <FrameLayout
         android:id="@+id/flContent"
         android:layout_width="match_parent"
