--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -56,11 +56,14 @@
             android:textSize="@dimen/text_size_settings"
             android:fontFamily="@font/ys_display_regular"/>
 
-        <Switch
-            android:id="@+id/dark_theme_switch"
+        <com.google.android.material.switchmaterial.SwitchMaterial
+            android:id="@+id/themeSwitcher"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            app:thumbTint="@drawable/switch_thumb_color"
+            app:trackTint="@drawable/switch_color"/>
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/share_layout"
         style="@style/settings_liner"
