task is done v8

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -12,4 +12,7 @@
 
         <color name="colorOnSurfaceInverse">#FFFFFF</color>
         <color name="colorControlActivated">#3772E7</color>
+
+        <color name="play_icon_tint">#1A1B22</color>
+
 </resources>
