--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -39,12 +39,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:background="@color/colorBackground"
-        app:tabIndicatorColor="?attr/colorOnBackground"
+        app:tabIndicatorColor="@color/colorOnBackground"
         app:tabIndicatorHeight="2dp"
         app:tabMode="fixed"
         app:tabGravity="fill"
-        app:tabSelectedTextColor="?attr/colorOnBackground"
-        app:tabTextColor="?attr/colorOnSurfaceVariant"
+        app:tabSelectedTextColor="@color/colorOnBackground"
+        app:tabTextColor="@color/colorOnBackground"
         app:tabTextAppearance="@style/MediaTabText"
         app:layout_constraintTop_toBottomOf="@id/ivBack"
         app:layout_constraintStart_toStartOf="parent"
