--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -14,8 +14,7 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:src="@drawable/ic_search_nothing_120"
-        android:contentDescription="@null"
-        app:tint="?attr/colorOnSurfaceVariant" />
+        android:contentDescription="@null" />
 
     <TextView
         android:layout_width="wrap_content"
