--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -6,32 +6,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    tools:context=".presentation.media.MediaActivity">
-
-    <ImageView
-        android:id="@+id/ivBack"
-        android:layout_width="@dimen/icon_size"
-        android:layout_height="@dimen/icon_size"
-        android:layout_marginStart="@dimen/icon_margin"
-        android:layout_marginTop="14dp"
-        android:contentDescription="@string/content_desc_back"
-        android:src="@drawable/ic_back_vector_16"
-        app:tint="?attr/colorOnBackground"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    tools:context=".presentation.media.MediaFragment">
 
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
+        android:layout_marginStart="@dimen/icon_margin"
+        android:layout_marginTop="14dp"
         android:text="@string/title_media"
         android:textColor="?attr/colorOnBackground"
         android:textSize="@dimen/text_size"
         android:fontFamily="@font/ys_display_medium"
-        app:layout_constraintBottom_toBottomOf="@id/ivBack"
-        app:layout_constraintStart_toEndOf="@id/ivBack"
-        app:layout_constraintTop_toTopOf="@id/ivBack" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
@@ -46,7 +34,7 @@
         app:tabSelectedTextColor="@color/colorOnBackground"
         app:tabTextColor="@color/colorOnBackground"
         app:tabTextAppearance="@style/MediaTabText"
-        app:layout_constraintTop_toBottomOf="@id/ivBack"
+        app:layout_constraintTop_toBottomOf="@id/tvTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
