--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchActivity">
+    tools:context=".presentation.search.SearchFragment">
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleLarge"
@@ -34,23 +34,13 @@
         android:gravity="center_vertical"
         android:padding="@dimen/lauout_padding">
 
-        <ImageView
-            android:id="@+id/ivBack"
-            android:layout_width="@dimen/icon_size"
-            android:layout_height="@dimen/icon_size"
-            android:src="@drawable/ic_back_vector_16"
-            app:tint="?attr/colorOnBackground"
-            android:contentDescription="@string/content_desc_back"
-            android:layout_margin="@dimen/padding_edittext"
-            android:padding="@dimen/lauout_padding"/>
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/search_title"
             android:textColor="?attr/colorOnBackground"
             android:textSize="@dimen/text_size"
-            android:paddingStart="@dimen/padding_edittext"
+            android:paddingStart="0dp"
             android:paddingBottom="@dimen/padding_edittext"
             android:paddingTop="10dp"
             android:fontFamily="@font/ys_display_medium"/>
