--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchActivity"
+    tools:context=".presentation.settings.SettingsFragment"
     style="@style/Test.Theme.PlaylistMaker">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -22,22 +22,14 @@
         android:paddingTop="14dp"
         android:paddingStart="@dimen/icon_margin">
 
-
-        <ImageView
-            android:id="@+id/back_arrow"
-            android:layout_width="@dimen/icon_margin"
-            android:layout_height="@dimen/icon_margin"
-            app:tint="?attr/colorOnBackground"
-            android:src="@drawable/ic_back_vector_16"/>
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/title_settings"
-            android:layout_marginStart="12dp"
+            android:layout_marginStart="0dp"
             android:textColor="?attr/colorOnBackground"
             android:textSize="@dimen/text_size"
-            android:paddingStart="12dp"
+            android:paddingStart="0dp"
             android:fontFamily="@font/ys_display_medium"/>
     </LinearLayout>
     <LinearLayout
